--- a/css/style.css
+++ b/css/style.css
@@ -12,13 +12,14 @@ body{
 
 header{
     background-color: white;
-    width: 390px;
-    height: 50px
-    ;
+
+    padding: 1rem 1rem;
+    
 }
 
 header a{
     font-size: 1.1rem;
+    padding: 8px;
 }
 
 nav{
